@@ -27,8 +27,9 @@ gcl (2.6.2-1) unstable; urgency=low
     settings.  Cast fixnum constant C arguments in gcl_cmploc.lsp
     explicitly to (long) to ensure they can be extracted via
     va_arg(,fixnum)
+  * reenable SA_SIGINFO on amd64 to restore SGC there
 
- -- Camm Maguire <camm@enhanced.com>  Fri, 11 Jun 2004 02:57:11 +0000
+ -- Camm Maguire <camm@enhanced.com>  Fri, 11 Jun 2004 03:41:49 +0000
 
 gcl (2.6.1-39) unstable; urgency=high
 
